working on layout

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,8 @@
     -->
     <!-- BootStrap -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css"/>
-    <title>React App</title>
+    <!-- GOOGLE FONT MONOTON -->
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Yanone+Kaffeesatz:200" rel="stylesheet">    <title>Animal Sanctuaries</title>
   </head>
   <body>
     <noscript>
