--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,13 @@
     <!-- BootStrap -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css"/>
 
+    <!--reactbootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous">
+    <!--Google Icons-->
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
     <!-- GOOGLE FONT MONOTON -->
     <link href="https://fonts.googleapis.com/css?family=Monoton|Yanone+Kaffeesatz:200" rel="stylesheet">    <title>Animal Sanctuaries</title>
